# crispy-bootstrap3

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
crispy_bootstrap3to5/: __init__.py
crispy_bootstrap3to5/templates/bootstrap3to5/: accordion-group.html  accordion.html  betterform.html  display_form.html  errors.html  errors_formset.html  field.html  inputs.html  multifield.html  table_inline_formset.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_bootstrap3to5/templates/bootstrap3to5/bootstrap3/: field.html  inputs.html  table_inline_formset.html
crispy_bootstrap3to5/templates/bootstrap3to5/bootstrap5/: accordion-group.html  field.html  inputs.html  table_inline_formset.html
crispy_bootstrap3to5/templates/bootstrap3to5/layout/: alert.html  baseinput.html  buttonholder.html  checkboxselectmultiple.html  checkboxselectmultiple_inline.html  column.html  div.html  field_errors.html  field_errors_block.html  field_file.html  field_with_buttons.html  fieldset.html  floating_field.html  formactions.html  help_text.html  help_text_and_errors.html  inline_field.html  modal.html  multifield.html  prepended_appended_text.html  radio_checkbox_select.html  radioselect.html  radioselect_inline.html  row.html  tab-link.html  tab.html  uneditable_input.html
crispy_bootstrap3to5/templates/bootstrap3to5/layout/bootstrap3/: alert.html  checkboxselectmultiple.html  checkboxselectmultiple_inline.html  field_with_buttons.html  inline_field.html  prepended_appended_text.html  radioselect.html  radioselect_inline.html  uneditable_input.html
crispy_bootstrap3to5/templates/bootstrap3to5/layout/bootstrap5/: alert.html  checkboxselectmultiple_inline.html  column.html  field_file.html  field_with_buttons.html  fieldset.html  floating_field.html  inline_field.html  prepended_appended_text.html  radio_checkbox_select.html  radioselect_inline.html  uneditable_input.html
tests/: forms.py  test_form_helper.py  test_layout.py  test_layout_objects.py  test_settings.py  test_tags.py  utils.py
tests/results/bootstrap3/test_form_helper/: bootstrap_form_show_errors_bs3_false.html  bootstrap_form_show_errors_bs3_false_gte50.html  bootstrap_form_show_errors_bs3_true.html  bootstrap_form_show_errors_bs3_true_gte50.html  test_form_show_errors_non_field_errors_false.html  test_form_show_errors_non_field_errors_false_gte50.html  test_form_show_errors_non_field_errors_false_lte40.html  test_form_show_errors_non_field_errors_true.html  test_form_show_errors_non_field_errors_true_gte50.html  test_form_show_errors_non_field_errors_true_lte40.html
tests/results/bootstrap3/test_layout/: test_layout_composition.html  test_layout_composition_gte50.html  test_second_layout_multifield_column_buttonholder_submit_div.html  test_second_layout_multifield_column_buttonholder_submit_div_gte50.html
tests/results/bootstrap3/test_layout_objects/: test_field_with_buttons.html  test_prepended_appended_text.html  test_prepended_appended_text_gte50.html
tests/templates/: custom_field_template.html  custom_form_template.html  custom_form_template_with_context.html
